<resources>
    <string name="app_name">Quick_Cash</string>
    <string name="EMPTY_JOB_TITLE">Empty Job Title</string>
    <string name="EMPTY_DEADLINE">Empty Application Deadline</string>
    <string name="EMPTY_STRING"></string>
    <string name="INVALID_JOB_CATEGORY">Invalid job category</string>
    <string name="INVALID_APPLICATION_DEADLINE">Invalid application deadline</string>
    <string name="EMPTY_DESCRIPTION">Empty description</string>
    <string name="EMPTY_LOCATION">Job location is required</string>
    <string name="INVALID_LOCATION">Unable to find location. Please enter a valid address.</string>
    <string name="FIREBASE_DB_URL">https://csci3130-fall2025-a2-default-rtdb.firebaseio.com</string>
    <string name="register">Register</string>
    <string name="banner_id">Banner ID</string>
    <string name="email">Email</string>
    <string name="account_registration">Account Registration</string>
...
